// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorEnvelopeController after received content and set empty first 1`] = `
<EditorEnvelopeView
  exposing={[Function]}
  loadingScreenContainer={
    <div
      id="loading-screen"
    >
      <div
        class="kogito-tooling--loading-screen"
        style="opacity: 0; transition: opacity 400ms;"
      >
        <div
          class="pf-c-page"
        >
          <main
            class="pf-c-page__main"
            role="main"
            tabindex="-1"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                class="pf-c-empty-state pf-m-lg"
              >
                <div
                  class="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    class="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      class="pf-c-spinner__clipper"
                    />
                    <div
                      class="pf-c-spinner__lead-ball"
                    />
                    <div
                      class="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  class="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  class="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  }
>
  <Portal
    containerInfo={
      <div
        id="loading-screen"
      >
        <div
          class="kogito-tooling--loading-screen"
          style="opacity: 0; transition: opacity 400ms;"
        >
          <div
            class="pf-c-page"
          >
            <main
              class="pf-c-page__main"
              role="main"
              tabindex="-1"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  class="pf-c-empty-state pf-m-lg"
                >
                  <div
                    class="pf-u-mb-lg"
                  >
                    <div
                      aria-valuetext="Loading..."
                      class="pf-c-spinner"
                      role="progressbar"
                    >
                      <div
                        class="pf-c-spinner__clipper"
                      />
                      <div
                        class="pf-c-spinner__lead-ball"
                      />
                      <div
                        class="pf-c-spinner__tail-ball"
                      />
                    </div>
                  </div>
                  <h5
                    class="pf-c-title pf-m-lg"
                  >
                    Loading...
                  </h5>
                  <div
                    class="pf-c-empty-state__body"
                  />
                </div>
              </div>
            </main>
          </div>
        </div>
      </div>
    }
  >
    <LoadingScreen
      visible={false}
    >
      <div
        className="kogito-tooling--loading-screen"
        onTransitionEnd={[Function]}
        style={
          Object {
            "opacity": 0,
            "transition": "opacity 400ms",
          }
        }
      >
        <div
          className="pf-c-page"
        >
          <main
            className="pf-c-page__main"
            role="main"
            tabIndex={-1}
          >
            <div
              className="pf-l-bullseye"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    className="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      className="pf-c-spinner__clipper"
                    />
                    <div
                      className="pf-c-spinner__lead-ball"
                    />
                    <div
                      className="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  className="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  className="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </LoadingScreen>
  </Portal>
  <DummyEditorComponent
    exposing={[Function]}
  >
    <div>
      Here's the dummy content: 
      test content
    </div>
  </DummyEditorComponent>
</EditorEnvelopeView>
`;

exports[`EditorEnvelopeController opens 1`] = `
<EditorEnvelopeView
  exposing={[Function]}
  loadingScreenContainer={
    <div
      id="loading-screen"
    >
      <div
        class="kogito-tooling--loading-screen"
        style="opacity: 1;"
      >
        <div
          class="pf-c-page"
        >
          <main
            class="pf-c-page__main"
            role="main"
            tabindex="-1"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                class="pf-c-empty-state pf-m-lg"
              >
                <div
                  class="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    class="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      class="pf-c-spinner__clipper"
                    />
                    <div
                      class="pf-c-spinner__lead-ball"
                    />
                    <div
                      class="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  class="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  class="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  }
>
  <Portal
    containerInfo={
      <div
        id="loading-screen"
      >
        <div
          class="kogito-tooling--loading-screen"
          style="opacity: 1;"
        >
          <div
            class="pf-c-page"
          >
            <main
              class="pf-c-page__main"
              role="main"
              tabindex="-1"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  class="pf-c-empty-state pf-m-lg"
                >
                  <div
                    class="pf-u-mb-lg"
                  >
                    <div
                      aria-valuetext="Loading..."
                      class="pf-c-spinner"
                      role="progressbar"
                    >
                      <div
                        class="pf-c-spinner__clipper"
                      />
                      <div
                        class="pf-c-spinner__lead-ball"
                      />
                      <div
                        class="pf-c-spinner__tail-ball"
                      />
                    </div>
                  </div>
                  <h5
                    class="pf-c-title pf-m-lg"
                  >
                    Loading...
                  </h5>
                  <div
                    class="pf-c-empty-state__body"
                  />
                </div>
              </div>
            </main>
          </div>
        </div>
      </div>
    }
  >
    <LoadingScreen
      visible={true}
    >
      <div
        className="kogito-tooling--loading-screen"
        onTransitionEnd={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <div
          className="pf-c-page"
        >
          <main
            className="pf-c-page__main"
            role="main"
            tabIndex={-1}
          >
            <div
              className="pf-l-bullseye"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    className="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      className="pf-c-spinner__clipper"
                    />
                    <div
                      className="pf-c-spinner__lead-ball"
                    />
                    <div
                      className="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  className="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  className="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </LoadingScreen>
  </Portal>
</EditorEnvelopeView>
`;

exports[`EditorEnvelopeController receives init request 1`] = `
<EditorEnvelopeView
  exposing={[Function]}
  loadingScreenContainer={
    <div
      id="loading-screen"
    >
      <div
        class="kogito-tooling--loading-screen"
        style="opacity: 1;"
      >
        <div
          class="pf-c-page"
        >
          <main
            class="pf-c-page__main"
            role="main"
            tabindex="-1"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                class="pf-c-empty-state pf-m-lg"
              >
                <div
                  class="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    class="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      class="pf-c-spinner__clipper"
                    />
                    <div
                      class="pf-c-spinner__lead-ball"
                    />
                    <div
                      class="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  class="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  class="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  }
>
  <Portal
    containerInfo={
      <div
        id="loading-screen"
      >
        <div
          class="kogito-tooling--loading-screen"
          style="opacity: 1;"
        >
          <div
            class="pf-c-page"
          >
            <main
              class="pf-c-page__main"
              role="main"
              tabindex="-1"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  class="pf-c-empty-state pf-m-lg"
                >
                  <div
                    class="pf-u-mb-lg"
                  >
                    <div
                      aria-valuetext="Loading..."
                      class="pf-c-spinner"
                      role="progressbar"
                    >
                      <div
                        class="pf-c-spinner__clipper"
                      />
                      <div
                        class="pf-c-spinner__lead-ball"
                      />
                      <div
                        class="pf-c-spinner__tail-ball"
                      />
                    </div>
                  </div>
                  <h5
                    class="pf-c-title pf-m-lg"
                  >
                    Loading...
                  </h5>
                  <div
                    class="pf-c-empty-state__body"
                  />
                </div>
              </div>
            </main>
          </div>
        </div>
      </div>
    }
  >
    <LoadingScreen
      visible={true}
    >
      <div
        className="kogito-tooling--loading-screen"
        onTransitionEnd={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <div
          className="pf-c-page"
        >
          <main
            className="pf-c-page__main"
            role="main"
            tabIndex={-1}
          >
            <div
              className="pf-l-bullseye"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    className="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      className="pf-c-spinner__clipper"
                    />
                    <div
                      className="pf-c-spinner__lead-ball"
                    />
                    <div
                      className="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  className="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  className="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </LoadingScreen>
  </Portal>
</EditorEnvelopeView>
`;

exports[`EditorEnvelopeController right after received content 1`] = `
<EditorEnvelopeView
  exposing={[Function]}
  loadingScreenContainer={
    <div
      id="loading-screen"
    >
      <div
        class="kogito-tooling--loading-screen"
        style="opacity: 1;"
      >
        <div
          class="pf-c-page"
        >
          <main
            class="pf-c-page__main"
            role="main"
            tabindex="-1"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                class="pf-c-empty-state pf-m-lg"
              >
                <div
                  class="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    class="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      class="pf-c-spinner__clipper"
                    />
                    <div
                      class="pf-c-spinner__lead-ball"
                    />
                    <div
                      class="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  class="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  class="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  }
>
  <Portal
    containerInfo={
      <div
        id="loading-screen"
      >
        <div
          class="kogito-tooling--loading-screen"
          style="opacity: 1;"
        >
          <div
            class="pf-c-page"
          >
            <main
              class="pf-c-page__main"
              role="main"
              tabindex="-1"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  class="pf-c-empty-state pf-m-lg"
                >
                  <div
                    class="pf-u-mb-lg"
                  >
                    <div
                      aria-valuetext="Loading..."
                      class="pf-c-spinner"
                      role="progressbar"
                    >
                      <div
                        class="pf-c-spinner__clipper"
                      />
                      <div
                        class="pf-c-spinner__lead-ball"
                      />
                      <div
                        class="pf-c-spinner__tail-ball"
                      />
                    </div>
                  </div>
                  <h5
                    class="pf-c-title pf-m-lg"
                  >
                    Loading...
                  </h5>
                  <div
                    class="pf-c-empty-state__body"
                  />
                </div>
              </div>
            </main>
          </div>
        </div>
      </div>
    }
  >
    <LoadingScreen
      visible={true}
    >
      <div
        className="kogito-tooling--loading-screen"
        onTransitionEnd={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <div
          className="pf-c-page"
        >
          <main
            className="pf-c-page__main"
            role="main"
            tabIndex={-1}
          >
            <div
              className="pf-l-bullseye"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    className="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      className="pf-c-spinner__clipper"
                    />
                    <div
                      className="pf-c-spinner__lead-ball"
                    />
                    <div
                      className="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  className="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  className="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </LoadingScreen>
  </Portal>
  <DummyEditorComponent
    exposing={[Function]}
  >
    <div>
      Here's the dummy content: 
    </div>
  </DummyEditorComponent>
</EditorEnvelopeView>
`;
